# crypto-terminal

./: .editorconfig  .gitignore  CLAUDE.md  README.md  biome.jsonc  next.config.ts  package.json  pnpm-lock.yaml  setup-claude-rules.sh  tmp-fi.txt
.claude/: settings.json
.github/workflows/: claude-code-review.yml  claude.yml  opencode-review-trigger.yml  opencode-review.yml  opencode-shared-config.yml  opencode.yml
.opencode/: opencode.json
.yaak/: yaak.fl_Ph6UPdEST4.yaml  yaak.fl_zpnDeu2EyD.yaml  yaak.rq_FXcMjoDfjY.yaml  yaak.rq_MKBvgQPyFw.yaml  yaak.rq_MQS3gkiZnU.yaml  yaak.rq_Mq2ZiufR4G.yaml  yaak.rq_f5Pxpb6o5Z.yaml  yaak.rq_uu99bk9GwF.yaml  yaak.rq_yYFFbaBeNK.yaml  yaak.wk_bSocGwdQUk.yaml  yaak.wr_CCGhcK5F4k.yaml
apps/binance-stream/: .env.example  README.md  pyproject.toml
apps/binance-stream/src/: config.py  connection_manager.py  main.py  models.py  redis_publisher.py  stream.py
apps/candle-collector/: .env.example  README.md  package.json  tsconfig.json
apps/instrument-registry/: .env.example  package.json
apps/postgres/: README.md  compose.yaml  destroy-data.sh
apps/probability-materializer/: .env.example  README.md  package.json
apps/trading-simulator/: .env.example  .gitignore  README.md  package.json  tsconfig.json
apps/web/: .env.example  package.json
design/: design.pen
rules/: commands.md  monorepo-structure.md  naming-conventions.md
rules/binance-stream/: architecture.md  environment.md  linting.md
rules/candle-collector/: architecture.md  database.md  environment.md
rules/web/: figma.md  (+4 more)
scripts/: market-simulator.ts
(+137 files in other folders)
